RESOLVED FIXED310521
StringParsingBuffer's operator+=() should not take in a signed integer type
https://bugs.webkit.org/show_bug.cgi?id=310521
Summary StringParsingBuffer's operator+=() should not take in a signed integer type
Chris Dumez
Reported 2026-03-23 01:04:00 PDT
StringParsingBuffer's operator+=() should not take in a signed integer type. It currently takes in a signed integer (int) and then relies on `advanceBy()` internally which takes in an unsigned integer (size_t).
Attachments
Chris Dumez
Comment 1 2026-03-23 01:05:49 PDT
EWS
Comment 2 2026-03-23 05:21:15 PDT
Committed 309754@main (062cc0d673db): <https://commits.webkit.org/309754@main> Reviewed commits have been landed. Closing PR #61152 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-03-23 05:22:14 PDT
Note You need to log in before you can comment on or make changes to this bug.